--- a/src/Component/Elements/Gallery/Gallery.css
+++ b/src/Component/Elements/Gallery/Gallery.css
@@ -37,6 +37,7 @@
     margin-bottom: 8px;
     border-radius: 4px;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 
 .section-gallery .all-gallery .gallery img:hover {
